# hwpkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: GOTCHAS.md  RECORD_FORMAT.md
examples/: example_data.json  fill_form.py
hwpedit/: __init__.py  charshape.py  extract.py  inspect.py  records.py
hwpkit/: __init__.py  cfb.py  charshape.py  extract.py  inspect.py  pipeline.py  records.py
tests/: test_charshape.py  test_extract.py  test_records.py  test_roundtrip.py
tests/fixtures/: README.md
