[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpkit"
version = "0.1.4"
description = "Read, fill, and edit Korean HWP (Hancom Office) documents in Python — extract text for LLM/RAG, fill forms, and rewrite the binary without corrupting it."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "psychofict" }]
requires-python = ">=3.9"
dependencies = ["olefile>=0.46"]
keywords = [
    "hwp", "hancom", "hancom-office", "korean", "hangul",
    "office", "compound-file", "ole", "cfb", "hwp5",
    "rag", "llm", "text-extraction", "form-automation", "document-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Korean",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/psychofict/hwpkit"
Issues = "https://github.com/psychofict/hwpkit/issues"
Author = "https://ebenworks.ebstar.co/"

[project.scripts]
hwpkit-inspect = "hwpkit.inspect:main"
hwpkit-text = "hwpkit.extract:main"

[tool.setuptools.packages.find]
include = ["hwpkit*"]
exclude = ["tests*", "examples*"]
